--- a/Watch.html
+++ b/Watch.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Watch</title>
+    <link rel="stylesheet" href="watch.css">
 </head>
 <body>
-    
-    <h1>Digital Watch</h1>
+    <div class="digital-clock">
+        <div class="week">
+            <div class="active">SUN</div>
+            <div>MON</div>
+            <div>TUE</div>
+            <div>WED</div>
+            <div>THU</div>
+            <div>FRI</div>
+            <div>SAT</div>
+        </div>
+        <div class="time">
+            <div class="hour">15</div>
+            <div class="dot">:</div>
+            <div class="min">40</div>
+        </div>
+    </div>
 </body>
 </html>
