Html and css files added

--- a/Watch.html
+++ b/Watch.html
@@ -7,21 +7,32 @@
     <link rel="stylesheet" href="watch.css">
 </head>
 <body>
-    <div class="digital-clock">
-        <div class="week">
-            <div class="active">SUN</div>
-            <div>MON</div>
-            <div>TUE</div>
-            <div>WED</div>
-            <div>THU</div>
-            <div>FRI</div>
-            <div>SAT</div>
-        </div>
-        <div class="time">
-            <div class="hour">15</div>
-            <div class="dot">:</div>
-            <div class="min">40</div>
-        </div>
-    </div>
+    <main class="container">
+        <h1 class="day" id="day"></h1>
+        <div class="box">
+            <div class="clock">
+                <div class="front-cloc">
+                    <div id="hour">00</div>
+                    <p>hour</p>
+                 </div>
+            </div>
+
+            <div class="clock">
+                <div class="front-cloc">
+                    <div id="minute">00</div>
+                    <p>minutes</p>
+                 </div>
+            </div>
+
+            <div class="clock">
+                <div class="front-cloc">
+                    <div id="second">00</div>
+                    <p>seconds</p>
+                 </div>
+            </div>
+
+         </div>
+    </main>
+
 </body>
 </html>
